# discord-llm-bot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  build.sh  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml  deploy.yml  get_logs.yml
config/: extra_context.yaml
convos/: bug-QTPFS-assertions.json  bug-fighters-out-of-map.json  enhancement-graphics.json  enhancement-multi-platform-sync-testing.json  enhancement-multi-unit-transport.json  refactor-multithreaded-loading.json  test1.txt
doc/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  STATE.md  TODOs.md  discord-bot-requirements.md
infra/: README.md  ansible.cfg  inventory  playbook.yml
infra/files/: bot_env.j2  github-actions-commands.sh.j2
src/: bot.py  config.py  logging_config.py  models.py  ui.py
src/cogs/: create_issue.py  engine_issue.py  registry.py  response.py  test_issue.py  ui.py
src/input/: file.py
src/output/: discord.py  github.py  github_auth.py  github_client.py  stdout.py
src/pipeline/: create_issue.py
src/transform/: base.py  gemini.py  prompts.py  protocol.py  (+1 more)
tests/: conftest.py  test_base_transform.py  test_bot.py  test_config.py  test_create_issue.py  test_discord_output.py  test_engine_issue.py  test_file_input.py  test_gemini.py  test_github.py  test_github_auth.py  test_issue_pipeline.py  test_logging_config.py  test_models.py  test_prompts.py  test_repo.py  test_response.py  test_sentry_tree.py  test_stdout.py  test_test_issue.py  test_tracing.py  test_transform_contract.py  test_ui.py
(+12 files in other folders)
